# category-theory-for-programmers

./: .gitignore  category-theory-for-programmers.cabal
.stack-work/: stack.sqlite3
src/: Main.lhs
