name:                category-theory-for-programmers
version:             0.1.0.0
-- synopsis:
description:         Exercises from Bartosz Milewski's book, Category Theory for Programmers
homepage:            https://github.com/thinkmpink/category-theory-for-programmers#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Pinkham
maintainer:          mpinkham3@gmail.com
copyright:           Michael Pinkham 2019
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable category-theory-for-programmers
  hs-source-dirs:      src
  main-is:             Main.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random >= 1.1,
                       containers >= 0.6,
                       transformers >= 0.5
